--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 	<html lang="en">
 	<body>
 	<h1>Hello World!</h1>
-	<p><img src="https://drive.google.com/uc?export=view&id=1yp75nFh2V400Hff4ITM9vEYBn2HQsOK1" width="500" height="560"></p>
+	<p><img id="logo" src="https://drive.google.com/uc?export=view&id=1yp75nFh2V400Hff4ITM9vEYBn2HQsOK1" width="500" height="560"></p>
 
 	<p>This is a test.</p>
+	<p>My name is Jesse.</p>
 	</body>
 	</html>
