--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	<p><img id="logo" src="https://drive.google.com/uc?export=view&id=1yp75nFh2V400Hff4ITM9vEYBn2HQsOK1" width="500" height="560"></p>
 
 	<p>This is a test.</p>
-	<p>My name is Jesse.</p>
+	<p>My name is Jesse. I am web developer.</p>
 	</body>
 	</html>
