--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 	<html lang="en">
+	<head>
+		<title>heathology's Github Page</title>
+		<link rel="stylesheet" href="styles.css">
+	</head>
 	<body>
 	<h1>Hello World!</h1>
 	<p><img id="logo" src="https://drive.google.com/uc?export=view&id=1yp75nFh2V400Hff4ITM9vEYBn2HQsOK1" width="500" height="560"></p>
-
-	<p>This is a test.</p>
 	<p>My name is Jesse. I am web developer.</p>
 	</body>
 	</html>
