--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<html lang="en">
 	<head>
 		<title>heathology's Github Page</title>
-		<link rel="stylesheet" href="heathology.github.io/styles.css">
+		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
 	<h1>Hello World!</h1>
