--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name=“viewport” content=“width=device-width, initial-scale=1.0”>
 	</head>
 	<body>
-	<h1>Hello World!</h1>
+	<section><h1>Hello World!</h1></section>
 	<p><img id="logo" src="https://drive.google.com/uc?export=view&id=1yp75nFh2V400Hff4ITM9vEYBn2HQsOK1" width="500" height="560"></p>
 	<p>My name is Jesse. I am web developer.</p>
 	</body>
