relocated log in img directory

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 	<section><h1>Hello World!</h1></section>
-	<p><img class="logo" src="https://drive.google.com/uc?export=view&id=1yp75nFh2V400Hff4ITM9vEYBn2HQsOK1" width="500" height="560"></p>
+	<p><img class="logo" src="img/Heath-Media-Designs-Logo-2022.png" width="500" height="560"></p>
 	<p>My name is Jesse. I am web developer.</p>
 	</body>
 	</html>
