--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 	<body>
 	<section><h1>Hello World!</h1></section>
 	<p><img class="logo" src="img/Heath-Media-Designs-Logo-2022.png" width="500" height="560"></p>
-	<p>My name is Jesse Heath, aka heathology. I am a self taught web developer and graphic designer. HTML and WordPress are my forte.</p>
+	<p>My name is Jesse Heath, aka heathology. <br>I am a self taught web developer and graphic designer. HTML and WordPress are my forte.</p>
 	</body>
 	</html>
