--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	</head>
 	<body>
 	<section><h1>Hello World!</h1></section>
-	<p><img class="logo" src="img/Heath-Media-Designs-Logo-2022.png" width="500" height="560"></p>
-	<p>My name is Jesse Heath, aka heathology. <br>I am a self taught web developer and graphic designer. HTML and WordPress are my forte.</p>
-	</body>
+	<section><p><img class="logo" src="img/Heath-Media-Designs-Logo-2022.png" width="500" height="560"></p></section>
+	<section><p>My name is Jesse Heath, aka heathology. <br>I am a self taught web developer and graphic designer. HTML and WordPress are my forte.</p></section>
+	<section><h1>My Projects</h1></section>
+</body>
 	</html>
