--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 		<meta name=“viewport” content=“width=device-width, initial-scale=1.0”>
 	</head>
 	<body>
-	<header><h1>Hello World!</h1></header>
-	<section><p><img class="logo" src="img/Heath-Media-Designs-Logo-2022.png" width="500" height="560"></p></section>
-	<article><p>My name is Jesse Heath, aka heathology. <br>I am a self taught web developer and graphic designer. HTML and WordPress are my forte.</p></article>
-	<section><h1>My Projects</h1></section>
-	<nav><a href="/cafe-menu/index.html">Cafe Menu</a>
-	<a href="/registration-form/index.html">Registration Form</a></nav>
-</body>
+	<div class="content">
+		<header><h1>Hello World!</h1></header>
+		<section><p><img class="logo" src="img/Heath-Media-Designs-Logo-2022.png" width="500" height="560"></p></section>
+		<article><p>My name is Jesse Heath, aka heathology. <br>I am a self taught web developer and graphic designer. HTML and WordPress are my forte.</p></article>
+		<section><h1>My Projects</h1></section>
+		<nav><a href="/cafe-menu/index.html">Cafe Menu</a>
+		<a href="/registration-form/index.html">Registration Form</a></nav>
+	</div>
+	</body>
 	</html>
