--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<div class="content">
 		<header><h1>Hello World!</h1></header>
 		<section><p><img class="logo" src="img/Heath-Media-Designs-Logo-2022.png" width="500" height="560"></p></section>
-		<section></section><article><p>My name is Jesse Heath, aka heathology. <br>I am a self taught web developer and graphic designer. HTML and WordPress are my forte.</p></article></section>
+		<section><article><p>My name is Jesse Heath, aka heathology. <br>I am a self taught web developer and graphic designer. <br>HTML and WordPress are my forte.</p></article></section>
 		<section><h1>My Projects</h1></section>
 		<article class="nav"><a href="/cafe-menu/index.html">Cafe Menu</a>
 		<a href="/registration-form/index.html">Registration Form</a></article>
