--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<body>
 	<div class="content">
 		<header><h1>Hello World!</h1></header>
-		<section><p><img class="logo" src="img/Heath-Media-Designs-Logo-2022.png" width="500" height="560"></p></section>
-		<section><p>My name is Jesse Heath, aka heathology. <br>I am a self taught web developer and graphic designer. <br>HTML and WordPress are my forte.</p></section>
-		<section><h1>My Projects</h1></section>
+		<p><img class="logo" src="img/Heath-Media-Designs-Logo-2022.png" width="500" height="560"></p>
+		<p>My name is Jesse Heath, aka heathology. <br>I am a self taught web developer and graphic designer. <br>HTML and WordPress are my forte.</p>
+		<h1>My Projects</h1>
 		<article class="nav"><a href="/cafe-menu/index.html">Cafe Menu</a>
 		<a href="/registration-form/index.html">Registration Form</a></article>
 	</div>
