placed footer and links in registration-form

--- a/registration-form/index.html
+++ b/registration-form/index.html
@@ -41,5 +41,11 @@
       </fieldset>
       <input type="submit" value="Submit" />
     </form>
+    <footer>
+      <p>
+        <a href="https://www.freecodecamp.org" target="_blank">Visit our website</a> | <a href="https://heathology.github.io/">Heath Media Designs</a>
+      </p>
+      <p class="address">123 Free Code Camp Drive</p>
+    </footer>
   </body>
 </html>
