updated project links as gradient buttons. center aligned.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,20 @@
 		<p><img class="logo" src="img/Heath-Media-Designs-Logo-2022.png" width="500" height="560"></p>
 		<p>My name is Jesse Heath, aka heathology. <br>I am a self taught web developer and graphic designer. <br>HTML and WordPress are my forte.</p>
 		<h1>My Projects</h1>
-		<article class="nav"><a href="/cafe-menu/index.html">Cafe Menu</a>
-		<a href="/registration-form/index.html">Registration Form</a></article> 
+		<div id="outer">
+			<div class="button-container button-container-one inner">
+				<a href="/cafe-menu/index.html"><button>
+				Cafe <br>Menu
+				<div class="fill-one"></div>
+			</button></a>
+			</div>
+			<div class="button-container button-container-two inner">
+				<a href="/registration-form/index.html"><button>
+				Registration Form
+				<div class="fill-two"></div>
+			</button></a>
+			</div>
+		</div>
 	</div>
 	</body>
 	</html>
