--- a/survey-form/index.html
+++ b/survey-form/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Survey Form</title>
-    <link href="styles.css" rel="stylesheet" />
+    <link href="/survey-form/css/styles.css" rel="stylesheet" />
 <body>
 <div class="container">
   <header class="header"><h1 id="title">Survey Form</h1>
