updated survey form link button placement.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 				<div class="fill-two"></div>
 			</button></a>
 			</div>
+		</div>
+		<div id="outer">
 			<div class="button-container button-container-two inner">
 				<a href="/survey-form/index.html"><button>
 				Survey Form
