updated gradient on link buttons

--- a/index.html
+++ b/index.html
@@ -24,12 +24,16 @@
 				<div class="fill-two"></div>
 			</button></a>
 			</div>
-		</div>
-		<div id="outer">
-			<div class="button-container button-container-two inner">
+			<div class="button-container button-container-three inner">
 				<a href="/survey-form/index.html"><button>
 				Survey Form
-				<div class="fill-two"></div>
+				<div class="fill-three"></div>
+			</button></a>
+			</div>
+			<div class="button-container button-container-three inner">
+				<a href="/survey-form/index.html"><button>
+				Coming Soon
+				<div class="fill-three"></div>
 			</button></a>
 			</div>
 		</div>
