updated link in coming soon button

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			</button></a>
 			</div>
 			<div class="button-container button-container-three inner">
-				<a href="/survey-form/index.html"><button>
+				<a href=""><button>
 				Coming Soon
 				<div class="fill-three"></div>
 			</button></a>
