--- a/survey-form/index.html
+++ b/survey-form/index.html
@@ -56,6 +56,11 @@
   <button type="submit" id="submit" value="Submit" class="submit-button">Submit</button>
   </div>
 </form>
+<footer>
+  <p><a href="https://www.freecodecamp.org" target="_blank">Visit our website</a> | <a href="https://heathology.github.io/">Heath Media Designs</a>
+  </p>
+  <p>123 Free Code Camp Drive</p>
+</footer>
 </div>
 </body>
 </html>
