--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<title>heathology's Github Page</title>
 		<link rel="stylesheet" href="css/styles.css">
-		<meta name=“viewport” content=“width=device-width, initial-scale=1.0”>
+		<meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	</head>
 	<body>
 	<div class="content">
