--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>heathology's Github Page</title>
 		<link rel="stylesheet" href="css/styles.css">
 		<meta charset="utf-8" />
@@ -24,6 +25,18 @@
 				<a href="/registration-form/index.html"><button>
 				Registration Form
 				<div class="fill-two"></div>
+			</button></a>
+			</div>
+			<div class="button-container button-container-three inner">
+				<a href="/survey-form/index.html"><button>
+				Survey Form
+				<div class="fill-three"></div>
+			</button></a>
+			</div>
+			<div class="button-container button-container-three inner">
+				<a href=""><button>
+				Coming Soon
+				<div class="fill-three"></div>
 			</button></a>
 			</div>
 		</div>
