updated missing elements in survey html and css

--- a/survey-form/index.html
+++ b/survey-form/index.html
@@ -1,11 +1,12 @@
-<!-- Assignment from freeCodeCamp.org -->
 <!DOCTYPE html>
+<!-- Assignment from freeCodeCamp.org -->
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Survey Form</title>
     <link href="/survey-form/css/styles.css" rel="stylesheet" />
+</head>
 <body>
 <div class="container">
   <header class="header"><h1 id="title">Survey Form</h1>
@@ -19,9 +20,8 @@
     <label id="email-label" for="email">Email</label> 
     <input name="email" id="email" type="email" class="form-control" required placeholder="Type Your Email">
     </div>
-    <div class="form-group">
-  <label id="number-label">Age (optional): <input id="number" name="age" type="number" class="form-control" min="13" max="120" placeholder="Type Your Age">
-  </div>
+    <div class="form-group"><label id="number-label">Age (optional): <input id="number" name="age" type="number" class="form-control" min="13" max="120" placeholder="Type Your Age">
+    </div>
     <div class="form-group">
     <label>Which option best describes your current role? <select name="dropdown" id="dropdown" class="form-control">
       <option value="">(Select one)</option>
