added rothko painting to my project links

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 			</button></a>
 			</div>
 			<div class="button-container button-container-three inner">
-				<a href=""><button>
-				Coming Soon
+				<a href="rothko-painting/index.html"><button>
+				Rothko Painting
 				<div class="fill-three"></div>
 			</button></a>
 			</div>
