--- a/rothko-painting/index.html
+++ b/rothko-painting/index.html
@@ -13,5 +13,10 @@
         <div class="three"></div>
       </div>
     </div>
+    <footer>
+        <p><a href="https://www.freecodecamp.org" target="_blank">Visit our website</a> | <a href="https://heathology.github.io/">Heath Media Designs</a>
+        </p>
+        <p>123 Free Code Camp Drive</p>
+      </footer>
   </body>
 </html>
