--- a/rothko-painting/index.html
+++ b/rothko-painting/index.html
@@ -6,6 +6,7 @@
     <link href="../rothko-painting/css/styles.css" rel="stylesheet">
   </head>
   <body>
+    <h1>Rothko Painting Made Using CSS Box Model</h1>
     <div class="frame">
       <div class="canvas">
         <div class="one"></div>
