new file flexbox photogalllery styles.css and index.html. updated heathology index.html to include new projects link.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
 				<div class="fill-three"></div>
 			</button></a>
 			</div>
+			<div class="button-container button-container-three inner">
+				<a href="css-flexbox-photo-gallery/index.html"><button>
+				CSS Flexbox Photo Gallery
+				<div class="fill-three"></div>
+			</button></a>
+			</div>
 		</div>
 	</div>
 	</body>
