--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
 	<div class="content">
 		<header><h1>Hello World!</h1></header>
-		<div></div><img class="logo" src="img/Heath-Media-Designs-Logo-2022.png" width="500" height="560"></div>
+		<div><img class="logo" src="img/Heath-Media-Designs-Logo-2022.png" width="500" height="560"></div>
 		<p>My name is Jesse Heath, aka heathology. <br>I am a self taught web developer and graphic designer. <br>HTML and WordPress are my forte.</p>
 		<h1>My Projects</h1>
 		<div id="outer">
@@ -42,6 +42,12 @@
 			<div class="button-container button-container-three inner">
 				<a href="css-flexbox-photo-gallery/index.html"><button>
 				CSS Flexbox Photo Gallery
+				<div class="fill-three"></div>
+			</button></a>
+			</div>
+			<div class="button-container button-container-three inner">
+				<a href="../heathology.github.io/css-nutrition-label/index.html"><button>
+				CSS Typography Nutrition Label
 				<div class="fill-three"></div>
 			</button></a>
 			</div>
