updated nutrition label project link url

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			</button></a>
 			</div>
 			<div class="button-container button-container-three inner">
-				<a href="../heathology.github.io/css-nutrition-label/index.html"><button>
+				<a href="../css-nutrition-label/index.html"><button>
 				CSS Typography Nutrition Label
 				<div class="fill-three"></div>
 			</button></a>
