updated project url links

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
 		<h1>My Projects</h1>
 		<div id="outer">
 			<div class="button-container button-container-one inner">
-				<a href="/cafe-menu/index.html"><button>
+				<a href="cafe-menu/index.html"><button>
 				Cafe <br>Menu
 				<div class="fill-one"></div>
 			</button></a>
 			</div>
 			<div class="button-container button-container-two inner">
-				<a href="/registration-form/index.html"><button>
+				<a href="registration-form/index.html"><button>
 				Registration Form
 				<div class="fill-two"></div>
 			</button></a>
 			</div>
 			<div class="button-container button-container-three inner">
-				<a href="/survey-form/index.html"><button>
+				<a href="survey-form/index.html"><button>
 				Survey Form
 				<div class="fill-three"></div>
 			</button></a>
