added button-container a (hyperlink) block

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div id="outer">
 			<div class="button-container button-container-one inner">
 				<a href="cafe-menu/index.html"><button>
-				Cafe <br>Menu
+				Cafe Menu
 				<div class="fill-one"></div>
 			</button></a>
 			</div>
