fixed registration form button vertical alignment.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<div class="fill-one"></div>
 			</button></a>
 			</div>
-			<div class="button-container button-container-two inner">
+			<div class="button-container button-container-two inner button-two-line">
 				<a href="registration-form/index.html"><button>
 				Registration Form
 				<div class="fill-two"></div>
