edited Rothko painting button text and vertical alignment.

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 				<div class="fill-three"></div>
 			</button></a>
 			</div>
-			<div class="button-container button-container-four inner">
+			<div class="button-container button-container-four inner button-two-line">
 				<a href="rothko-painting/index.html"><button>
-				Rothko Painting
+				CSS Rothko Painting
 				<div class="fill-four"></div>
 			</button></a>
 			</div>
