--- a/index.html
+++ b/index.html
@@ -51,6 +51,24 @@
 				<div class="fill-six"></div>
 			</button></a>
 			</div>
+			<div class="button-container button-container-six inner">
+				<a href="http://mettrys.com/"><button>
+				Mettrys WordPress Website
+				<div class="fill-six"></div>
+			</button></a>
+			</div>
+			<div class="button-container button-container-six inner">
+				<a href="http://circlea.co/"><button>
+				Circle A WordPress Website
+				<div class="fill-six"></div>
+			</button></a>
+			</div>
+			<div class="button-container button-container-six inner">
+				<a href="https://www.behance.net/gallery/143444635/Website-WordPress-Graphic-Design"><button>
+				Other WordPress Websites
+				<div class="fill-six"></div>
+			</button></a>
+			</div>
 		</div>
 	</div>
 	</body>
