updated three-line project links target window

--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
 			</button></a>
 			</div>
 			<div class="button-container button-container-six inner button-three-line">
-				<a href="http://mettrys.com/"><button>
+				<a href="http://mettrys.com/" target="_blank"></a>
 				Mettrys WordPress Website
 				<div class="fill-seven"></div>
 			</button></a>
 			</div>
 			<div class="button-container button-container-six inner button-three-line">
-				<a href="http://circlea.co/"><button>
+				<a href="http://circlea.co/" target="_blank"><button>
 				Circle A WordPress Website
 				<div class="fill-seven"></div>
 			</button></a>
 			</div>
 			<div class="button-container button-container-six inner button-three-line">
-				<a href="https://www.behance.net/gallery/143444635/Website-WordPress-Graphic-Design"><button>
+				<a href="https://www.behance.net/gallery/143444635/Website-WordPress-Graphic-Design" target="_blank"><button>
 				Other WordPress Websites
 				<div class="fill-seven"></div>
 			</button></a>
