--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			</button></a>
 			</div>
 			<div class="button-container button-container-six inner button-three-line">
-				<a href="http://mettrys.com/" target="_blank"><button></button>
+				<a href="http://mettrys.com/" target="_blank"><button>
 				Mettrys WordPress Website
 				<div class="fill-seven"></div>
 			</button></a>
