--- a/registration-form/index.html
+++ b/registration-form/index.html
@@ -2,7 +2,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Registration Form</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /><title>Registration Form</title>
 	  <link rel="stylesheet" href="../registration-form/styles.css" />
   </head>
   <body>
