updated index.html project links to include html/css quiz

--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
 				<div class="fill-six"></div>
 			</button></a>
 			</div>
+			<div class="button-container button-container-six inner">
+				<a href="css-nutrition-label/index.html"><button>
+				HTML/CSS Quiz
+				<div class="fill-six"></div>
+			</button></a>
+			</div>
 			<div class="button-container button-container-six inner button-three-line">
 				<a href="http://mettrys.com/" target="_blank"><button>
 				Mettrys WordPress Website
