created new tribute page project index.html and styles.css updated links in html-css-quiz index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			</button></a>
 			</div>
 			<div class="button-container button-container-six inner">
-				<a href="css-nutrition-label/index.html"><button>
+				<a href="html-css-quiz/index.html"><button>
 				HTML/CSS Quiz
 				<div class="fill-six"></div>
 			</button></a>
