modified main styles.css modified footer on quiz and tribute page with links

--- a/html-css-quiz/index.html
+++ b/html-css-quiz/index.html
@@ -111,7 +111,7 @@
     </main>
     <footer>
       <address>
-        <a href="https://freecodecamp.org">freeCodeCamp</a><br />
+        <a href="https://freecodecamp.org">freeCodeCamp</a> | <a href="https://heathology.github.io/">Heath Media Designs</a><br />
         San Francisco<br />
         California<br />
         USA
