--- a/tribute-page/index.html
+++ b/tribute-page/index.html
@@ -103,5 +103,10 @@
         <h3>If you have time, you should read more about this incredible human being on his <a id="tribute-link" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">Wikipedia entry</a>.</h3>
       </div>
     </main>
+    <footer>
+      <p><a href="https://www.freecodecamp.org" target="_blank">Visit our website</a> | <a href="https://heathology.github.io/">Heath Media Designs</a>
+      </p>
+      <p>123 Free Code Camp Drive</p>
+    </footer>
   </body>
   </html>
