--- a/survey-form/index.html
+++ b/survey-form/index.html
@@ -20,7 +20,7 @@
     <label id="email-label" for="email">Email</label> 
     <input name="email" id="email" type="email" class="form-control" required placeholder="Type Your Email">
     </div>
-    <div class="form-group"><label id="number-label">Age (optional): <input id="number" name="age" type="number" class="form-control" min="13" max="120" placeholder="Type Your Age">
+    <div class="form-group"><label id="number-label">Age (optional):</label> <input id="number" name="age" type="number" class="form-control" min="13" max="120" placeholder="Type Your Age">
     </div>
     <div class="form-group">
     <label>Which option best describes your current role? <select name="dropdown" id="dropdown" class="form-control">
