--- a/tribute-page/index.html
+++ b/tribute-page/index.html
@@ -10,13 +10,20 @@
   <body>
     <main id="main">
       <h1 id="title">Dr. Norman Borlaug</h1>
-      <p>The man who saved a billions lives</p>
-      <div id="img-div">
-        <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" id="image">
-        <caption id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</caption>
-      </div>
-      <div id="tribute-info">
- <h3 id="headline">Here's a time line of Dr. Borlaug's life:</h3>
+      <p>The man who saved a billion lives</p>
+      <figure id="img-div">
+        <img
+          id="image"
+          src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg"
+          alt="Dr. Norman Borlaug seen standing in Mexican wheat field with a group of biologists"
+        />
+        <figcaption id="img-caption">
+          Dr. Norman Borlaug, third from the left, trains biologists in Mexico
+          on how to increase wheat yields - part of his life-long war on hunger.
+        </figcaption>
+      </figure>
+      <section id="tribute-info">
+        <h3 id="headline">Here's a time line of Dr. Borlaug's life:</h3>
         <ul>
           <li><strong>1914</strong> - Born in Cresco, Iowa</li>
           <li>
@@ -100,8 +107,17 @@
           </p>
           <cite>-- Indian Prime Minister Manmohan Singh</cite>
         </blockquote>
-        <h3>If you have time, you should read more about this incredible human being on his <a id="tribute-link" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">Wikipedia entry</a>.</h3>
-      </div>
+        <h3>
+          If you have time, you should read more about this incredible human
+          being on his
+          <a
+            id="tribute-link"
+            href="https://en.wikipedia.org/wiki/Norman_Borlaug"
+            target="_blank"
+            >Wikipedia entry</a
+          >.
+        </h3>
+      </section>
     </main>
     <footer>
       <p><a href="https://www.freecodecamp.org" target="_blank">Visit our website</a> | <a href="https://heathology.github.io/">Heath Media Designs</a>
