created new project: css balance sheet and updated project links and project buttons.

--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
 				<div class="fill-tribute"></div>
 			</button></a>
 			</div>
+			<div class="button-container button-container-balance-sheet inner button-two-line">
+				<a href="css-balance-sheet/index.html"><button>
+				HTML/CSS Balance Sheet
+				<div class="fill-tribute"></div>
+			</button></a>
+			</div>
 			<div class="button-container button-container-mettrys inner button-three-line">
 				<a href="http://mettrys.com/" target="_blank"><button>
 				Mettrys WordPress Website
