--- a/css-balance-sheet/index.html
+++ b/css-balance-sheet/index.html
@@ -117,5 +117,10 @@
         </div>
       </section>
     </main>
+    <footer>
+        <p><a href="https://www.freecodecamp.org" target="_blank">Visit our website</a> | <a href="https://heathology.github.io/">Heath Media Designs</a>
+        </p>
+        <p>123 Free Code Camp Drive</p>
+      </footer>
   </body>
 </html>
