updaed index and css on main page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		
 		<title>heathology's Github Page</title>
-		<link rel="stylesheet" href="css/styles.css">
+		<link rel="stylesheet" href="../heathology.github.io/css/styles.css">
 		<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	</head>
@@ -14,73 +14,19 @@
 		<div><img class="logo" src="img/Heath-Media-Designs-Logo-2022.png" width="500" height="560"></div>
 		<p>My name is Jesse Heath, aka heathology. <br>I am a self taught web developer and graphic designer. <br>HTML and WordPress are my forte.</p>
 		<h1>My Projects</h1>
-		<div id="outer">
-			<div class="button-container button-container-cafe-menu inner">
-				<a href="cafe-menu/index.html"><button>
-				Cafe Menu
-				<div class="fill-cafe-menu"></div>
-			</button></a>
-			</div>
-			<div class="button-container button-container-registration-form inner button-two-line">
-				<a href="registration-form/index.html"><button>
-				Registration Form
-				<div class="fill-registration-form"></div>
-			</button></a>
-			</div>
-			<div class="button-container button-container-survey-form inner">
-				<a href="survey-form/index.html"><button>
-				Survey Form
-				<div class="fill-survey-form"></div>
-			</button></a>
-			</div>
-			<div class="button-container button-container-rothko-painting inner button-two-line">
-				<a href="rothko-painting/index.html"><button>
-				CSS Rothko Painting
-				<div class="fill-rothko-painting"></div>
-			</button></a>
-			</div>
-			<div class="button-container button-container-flexbox-photo-gallery inner">
-				<a href="css-flexbox-photo-gallery/index.html"><button>
-				CSS Flexbox Photo Gallery
-				<div class="fill-flexbox-photo-gallery"></div>
-			</button></a>
-			</div>
-			<div class="button-container button-container-nutrition-label inner">
-				<a href="css-nutrition-label/index.html"><button>
-				CSS Typography Nutrition Label
-				<div class="fill-nutrition-label"></div>
-			</button></a>
-			</div>
-			<div class="button-container button-container-quiz inner">
-				<a href="html-css-quiz/index.html"><button>
-				HTML/CSS Quiz
-				<div class="fill-quiz"></div>
-			</button></a>
-			</div>
-			<div class="button-container button-container-tribute inner button-two-line">
-				<a href="tribute-page/index.html"><button>
-				HTML/CSS Tribute Page
-				<div class="fill-tribute"></div>
-			</button></a>
-			</div>
-			<div class="button-container button-container-mettrys inner button-three-line">
-				<a href="http://mettrys.com/" target="_blank"><button>
-				Mettrys WordPress Website
-				<div class="fill-mettrys"></div>
-			</button></a>
-			</div>
-			<div class="button-container button-container-circle-a inner button-three-line">
-				<a href="http://circlea.co/" target="_blank"><button>
-				Circle A WordPress Website
-				<div class="fill-circle-a"></div>
-			</button></a>
-			</div>
-			<div class="button-container button-container-wordpress-websites inner button-three-line">
-				<a href="https://www.behance.net/gallery/143444635/Website-WordPress-Graphic-Design" target="_blank"><button>
-				Other WordPress Websites
-				<div class="fill-wordpress-websites"></div>
-			</button></a>
-			</div>
+		<div class="btn-container">
+			<a class="btn btn-1" href="cafe-menu/index.html">Cafe Menu</a>
+            <a class="btn btn-1" href="registration-form/index.html">Registration Form</a>
+            <a class="btn btn-1" href="survey-form/index.html">Survey Form</a> 
+            <a class="btn btn-1" href="rothko-painting/index.html">CSS Rothko Painting</a> 
+            <a class="btn btn-1" href="css-flexbox-photo-gallery/index.html">CSS Flexbox Photo Gallery</a>
+            <a class="btn btn-1" href="css-nutrition-label/index.html">CSS Typography Nutrition Label</a>
+            <a class="btn btn-1" href="html-css-quiz/index.html">HTML/CSS Quiz</a>
+            <a class="btn btn-1" href="tribute-page/index.html">HTML/CSS Tribute Page</a> 
+            <a class="btn btn-1" href="css-balance-sheet/index.html">HTML/CSS Balance Sheet</a> 
+            <a class="btn btn-1" href="http://mettrys.com/" target="_blank">Mettry's WordPress Website</a>
+            <a class="btn btn-1" href="http://circlea.co/" target="_blank">Circle A WordPress Website</a>
+            <a class="btn btn-1"  href="https://www.behance.net/gallery/143444635/Website-WordPress-Graphic-Design" target="_blank">Other WordPress Websites</a>
 		</div>
 	</div>
 	</body>
