--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <a class="btn btn-1" href="registration-form/index.html">Registration Form</a>
             <a class="btn btn-1" href="survey-form/index.html">Survey Form</a> 
             <a class="btn btn-1" href="rothko-painting/index.html">CSS Rothko Painting</a> 
-            <a class="btn btn-1" href="css-flexbox-photo-gallery/index.html">CSS Flexbox Photo Gallery</a>
-            <a class="btn btn-1" href="css-nutrition-label/index.html">CSS Typography Nutrition Label</a>
+            <a class="btn btn-1" href="css-flexbox-photo-gallery/index.html">Flexbox Photo Gallery</a>
+            <a class="btn btn-1" href="css-nutrition-label/index.html">CSS Nutrition Label</a>
             <a class="btn btn-1" href="html-css-quiz/index.html">HTML/CSS Quiz</a>
             <a class="btn btn-1" href="tribute-page/index.html">HTML/CSS Tribute Page</a> 
             <a class="btn btn-1" href="css-balance-sheet/index.html">HTML/CSS Balance Sheet</a> 
