updated footer links picasso/index.html

--- a/css-picasso/index.html
+++ b/css-picasso/index.html
@@ -87,11 +87,11 @@
           <div id="guitar-neck"></div>
         </div>
       </div>
+      
     </div>
-    <footer>
-        <p><a href="https://www.freecodecamp.org" target="_blank">Visit our website</a> | <a href="https://heathology.github.io/">Heath Media Designs</a>
+    <footer class="footer">
+        <p><a href="https://www.freecodecamp.org" target="_blank">Visit freeCodeCamp</a> | <a href="https://heathology.github.io/">Heath Media Designs</a>
         </p>
-        <p>123 Free Code Camp Drive</p>
       </footer>
   </body>
 </html>
