created new piano index and css files. created new technical documentation index and css files.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		
 		<title>heathology's Github Page</title>
-		<link rel="stylesheet" href="../css/styles.css">
+		<link rel="stylesheet" href="css/styles.css">
 		<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	</head>
@@ -22,8 +22,9 @@
             <a class="btn btn-1" href="css-flexbox-photo-gallery/index.html">Flexbox Photo Gallery</a>
             <a class="btn btn-1" href="css-nutrition-label/index.html">CSS Nutrition Label</a>
             <a class="btn btn-1" href="html-css-quiz/index.html">HTML/CSS Quiz</a>
-            <a class="btn btn-1" href="tribute-page/index.html">HTML/CSS Tribute Page</a> 
-            <a class="btn btn-1" href="css-balance-sheet/index.html">HTML/CSS Balance Sheet</a> 
+            <a class="btn btn-1" href="tribute-page/index.html">CSS Tribute Page</a> 
+            <a class="btn btn-1" href="css-balance-sheet/index.html">CSS Balance Sheet</a>
+			<a class="btn btn-1" href="css-picasso/index.html">CSS Picasso Painting</a> 
             <a class="btn btn-1" href="http://mettrys.com/" target="_blank">Mettry's WordPress Website</a>
             <a class="btn btn-1" href="http://circlea.co/" target="_blank">Circle A WordPress Website</a>
             <a class="btn btn-1"  href="https://www.behance.net/gallery/143444635/Website-WordPress-Graphic-Design" target="_blank">Other WordPress Websites</a>
