--- a/registration-form/index.html
+++ b/registration-form/index.html
@@ -1,15 +1,15 @@
-<!-- Assignment from freeCodeCamp.org -->
 <!DOCTYPE html>
+<!-- Assignment from freeCodeCamp.org -->
 <html>
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /><title>Registration Form</title>
-	  <link rel="stylesheet" href="../registration-form/styles.css" />
+	  <link rel="stylesheet" href="../registration-form/css/styles.css" />
   </head>
   <body>
     <h1>Registration Form</h1>
     <p>Please fill out this form with the required information</p>
-    <form action='https://register-demo.freecodecamp.org'>
+    <form action="https://register-demo.freecodecamp.org">
       <fieldset>
         <label>Enter Your First Name: <input type="text" name="first-name" required /></label>
         <label>Enter Your Last Name: <input type="text" name="last-name" required /></label>
