updated footer links on every project

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <a class="btn btn-1" href="tribute-page/index.html">CSS Tribute Page</a> 
             <a class="btn btn-1" href="css-balance-sheet/index.html">CSS Balance Sheet</a>
 			<a class="btn btn-1" href="css-picasso/index.html">CSS Picasso Painting</a> 
+			<a class="btn btn-1" href="css-piano/index.html">CSS Piano</a>
+			<a class="btn btn-1" href="technical-documentation/index.html">CSS Technical Documentation</a> 
             <a class="btn btn-1" href="http://mettrys.com/" target="_blank">Mettry's WordPress Website</a>
             <a class="btn btn-1" href="http://circlea.co/" target="_blank">Circle A WordPress Website</a>
             <a class="btn btn-1"  href="https://www.behance.net/gallery/143444635/Website-WordPress-Graphic-Design" target="_blank">Other WordPress Websites</a>
