--- a/cafe-menu/index.html
+++ b/cafe-menu/index.html
@@ -1,5 +1,5 @@
-<!-- Assignment from freeCodeCamp.org -->
 <!DOCTYPE html>
+<!-- Assignment from freeCodeCamp.org -->
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -54,7 +54,7 @@
       <hr class="bottom-line">
       <footer>
         <p>
-          <a href="https://www.freecodecamp.org" target="_blank">Visit our website</a> | <a href="https://heathology.github.io/">Heath Media Designs</a>
+          <a href="https://www.freecodecamp.org" target="_blank">Visit freeCodeCamp</a> | <a href="https://heathology.github.io/">Heath Media Designs</a>
         </p>
         <p class="address">123 Free Code Camp Drive</p>
       </footer>
