--- a/css-flexbox-photo-gallery/index.html
+++ b/css-flexbox-photo-gallery/index.html
@@ -23,7 +23,7 @@
       <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/10.jpg"/>
     </div>
     <footer class="footer">
-        <p><a href="https://www.freecodecamp.org" target="_blank">Visit our website</a> | <a href="https://heathology.github.io/">Heath Media Designs</a>
+        <p><a href="https://www.freecodecamp.org" target="_blank">Visit freeCodeCamp</a> | <a href="https://heathology.github.io/">Heath Media Designs</a>
         </p>
         <p>123 Free Code Camp Drive</p>
       </footer>
