--- a/css-nutrition-label/index.html
+++ b/css-nutrition-label/index.html
@@ -35,7 +35,7 @@
         <div class="divider"></div>
         <p class="indent no-divider">Total Sugars 12g</p>
         <div class="divider dbl-indent"></div>
-        <p class="dbl-indent no-divider">Includes 10g Added Sugars <span class="right bold">20%</span>
+        <p class="dbl-indent no-divider">Includes 10g Added Sugars <span class="right bold">20%</span></p>
         <div class="divider"></div>
         <p class="no-divider"><span class="bold">Protein</span> 3g</p>
         <div class="divider lg"></div>
@@ -48,7 +48,7 @@
       <p class="note">* The % Daily Value (DV) tells you how much a nutrient in a serving of food contributes to a daily diet. 2,000 calories a day is used for general nutrition advice.</p>
     </div>
     <footer class="footer">
-      <p><a href="https://www.freecodecamp.org" target="_blank">Visit our website</a> | <a href="https://heathology.github.io/">Heath Media Designs</a>
+      <p><a href="https://www.freecodecamp.org" target="_blank">Visit freeCodeCamp</a> | <a href="https://heathology.github.io/">Heath Media Designs</a>
       </p>
       <p>123 Free Code Camp Drive</p>
     </footer>
