--- a/registration-form/index.html
+++ b/registration-form/index.html
@@ -44,7 +44,7 @@
     </form>
     <footer>
       <p>
-        <a href="https://www.freecodecamp.org" target="_blank">Visit our website</a> | <a href="https://heathology.github.io/">Heath Media Designs</a>
+        <a href="https://www.freecodecamp.org" target="_blank">Visit freeCodeCamp</a> | <a href="https://heathology.github.io/">Heath Media Designs</a>
       </p>
       <p class="address">123 Free Code Camp Drive</p>
     </footer>
