--- a/tribute-page/index.html
+++ b/tribute-page/index.html
@@ -120,7 +120,7 @@
       </section>
     </main>
     <footer>
-      <p><a href="https://www.freecodecamp.org" target="_blank">Visit our website</a> | <a href="https://heathology.github.io/">Heath Media Designs</a>
+      <p><a href="https://www.freecodecamp.org" target="_blank">Visit freeCodeCamp</a> | <a href="https://heathology.github.io/">Heath Media Designs</a>
       </p>
       <p>123 Free Code Camp Drive</p>
     </footer>
