--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 			<a class="btn btn-1" href="css-picasso/index.html">CSS Picasso Painting</a> 
 			<a class="btn btn-1" href="css-piano/index.html">CSS Piano</a>
 			<a class="btn btn-1" href="technical-documentation/index.html">CSS Technical Documentation</a> 
+			<a class="btn btn-1" href="css-city-skyline/index.html">CSS City Skyline</a> 
             <a class="btn btn-1" href="http://mettrys.com/" target="_blank">Mettry's WordPress Website</a>
             <a class="btn btn-1" href="http://circlea.co/" target="_blank">Circle A WordPress Website</a>
             <a class="btn btn-1"  href="https://www.behance.net/gallery/143444635/Website-WordPress-Graphic-Design" target="_blank">Other WordPress Websites</a>
