updated personal website info

--- a/scrimba-web-apps/personal-website/index.html
+++ b/scrimba-web-apps/personal-website/index.html
@@ -17,6 +17,9 @@
                 <li>36 years old</li>
                 <li>Live in the United States</li>
                 <li>Love the MCU</li>
+                <li>I am a historical theologian</li>
+                <li>I am also a musician</li>
+                <li>I occasionally play video games</li>
             </ul>
         <p>Please connect with me on <a href="https://www.linkedin.com/in/jesse-heath-60382122/">LinkedIn here</a>.
         <input type="email">
