--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
 		<p>My name is Jesse Heath, aka heathology. <br>I am a self taught web developer and graphic designer. <br>HTML and WordPress are my forte.</p>
 		<h1>My Projects</h1>
 		<div class="btn-container">
-			<a class="btn btn-1" href="cafe-menu/index.html">Cafe Menu</a>
-            <a class="btn btn-1" href="registration-form/index.html">Registration Form</a>
-            <a class="btn btn-1" href="survey-form/index.html">Survey Form</a> 
-            <a class="btn btn-1" href="rothko-painting/index.html">CSS Rothko Painting</a> 
-            <a class="btn btn-1" href="css-flexbox-photo-gallery/index.html">Flexbox Photo Gallery</a>
-            <a class="btn btn-1" href="css-nutrition-label/index.html">CSS Nutrition Label</a>
-            <a class="btn btn-1" href="html-css-quiz/index.html">HTML/CSS Quiz</a>
-            <a class="btn btn-1" href="tribute-page/index.html">CSS Tribute Page</a> 
-            <a class="btn btn-1" href="css-balance-sheet/index.html">CSS Balance Sheet</a>
-			<a class="btn btn-1" href="css-picasso/index.html">CSS Picasso Painting</a> 
-			<a class="btn btn-1" href="css-piano/index.html">CSS Piano</a>
-			<a class="btn btn-1" href="technical-documentation/index.html">CSS Technical Documentation</a> 
-			<a class="btn btn-1" href="css-city-skyline/index.html">CSS City Skyline</a> 
+			<a class="btn btn-1" href="cafe-menu/">Cafe Menu</a>
+            <a class="btn btn-1" href="registration-form/">Registration Form</a>
+            <a class="btn btn-1" href="survey-form/">Survey Form</a> 
+            <a class="btn btn-1" href="rothko-painting/">CSS Rothko Painting</a> 
+            <a class="btn btn-1" href="css-flexbox-photo-gallery/">Flexbox Photo Gallery</a>
+            <a class="btn btn-1" href="css-nutrition-label/">CSS Nutrition Label</a>
+            <a class="btn btn-1" href="html-css-quiz/">HTML/CSS Quiz</a>
+            <a class="btn btn-1" href="tribute-page/">CSS Tribute Page</a> 
+            <a class="btn btn-1" href="css-balance-sheet/">CSS Balance Sheet</a>
+			<a class="btn btn-1" href="css-picasso/">CSS Picasso Painting</a> 
+			<a class="btn btn-1" href="css-piano/">CSS Piano</a>
+			<a class="btn btn-1" href="technical-documentation/">CSS Technical Documentation</a> 
+			<a class="btn btn-1" href="css-city-skyline/">CSS City Skyline</a> 
             <a class="btn btn-1" href="http://mettrys.com/" target="_blank">Mettry's WordPress Website</a>
             <a class="btn btn-1" href="http://circlea.co/" target="_blank">Circle A WordPress Website</a>
             <a class="btn btn-1"  href="https://www.behance.net/gallery/143444635/Website-WordPress-Graphic-Design" target="_blank">Other WordPress Websites</a>
