added grid-magazine to project links

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 			<a class="btn btn-1" href="css-picasso/">CSS Picasso Painting</a> 
 			<a class="btn btn-1" href="css-piano/">CSS Piano</a>
 			<a class="btn btn-1" href="technical-documentation/">CSS Technical Documentation</a> 
-			<a class="btn btn-1" href="css-city-skyline/">CSS City Skyline</a> 
+			<a class="btn btn-1" href="css-city-skyline/">CSS City Skyline</a>
+			<a class="btn btn-1" href="grid-magazine/">CSS Grid Magazine</a>
             <a class="btn btn-1" href="http://mettrys.com/" target="_blank">Mettry's WordPress Website</a>
             <a class="btn btn-1" href="http://circlea.co/" target="_blank">Circle A WordPress Website</a>
             <a class="btn btn-1"  href="https://www.behance.net/gallery/143444635/Website-WordPress-Graphic-Design" target="_blank">Other WordPress Websites</a>
