added css magazine to project links

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
             <a class="btn btn-1" href="registration-form/">Registration Form</a>
             <a class="btn btn-1" href="survey-form/">Survey Form</a> 
             <a class="btn btn-1" href="rothko-painting/">CSS Rothko Painting</a> 
-            <a class="btn btn-1" href="css-flexbox-photo-gallery/">Flexbox Photo Gallery</a>
-            <a class="btn btn-1" href="css-nutrition-label/">CSS Nutrition Label</a>
+            <a class="btn btn-1" href="flexbox-photo-gallery/">Flexbox Photo Gallery</a>
+            <a class="btn btn-1" href="nutrition-label/">CSS Nutrition Label</a>
             <a class="btn btn-1" href="html-css-quiz/">HTML/CSS Quiz</a>
             <a class="btn btn-1" href="tribute-page/">CSS Tribute Page</a> 
-            <a class="btn btn-1" href="css-balance-sheet/">CSS Balance Sheet</a>
+            <a class="btn btn-1" href="balance-sheet/">CSS Balance Sheet</a>
 			<a class="btn btn-1" href="css-picasso/">CSS Picasso Painting</a> 
 			<a class="btn btn-1" href="css-piano/">CSS Piano</a>
 			<a class="btn btn-1" href="technical-documentation/">CSS Technical Documentation</a> 
-			<a class="btn btn-1" href="css-city-skyline/">CSS City Skyline</a>
+			<a class="btn btn-1" href="city-skyline/">CSS City Skyline</a>
 			<a class="btn btn-1" href="grid-magazine/">CSS Grid Magazine</a>
             <a class="btn btn-1" href="http://mettrys.com/" target="_blank">Mettry's WordPress Website</a>
             <a class="btn btn-1" href="http://circlea.co/" target="_blank">Circle A WordPress Website</a>
