--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<!-- START WELCOME SECTION -->
 
 	<section id="welcome-section" class="welcome-section">
-		<div><img class="logo" src="https://github.com/heathology/portfolio/blob/main/img/Heath-Media-Designs-Logo-2022.png" width="500" height="560"></div>
+		<div><img class="logo" src="https://heathology.github.io/portfolio/img/Heath-Media-Designs-Logo-2022.png" width="500" height="560"></div>
 		<h1 class="intro">Hey I am heathology</h1>
 		<p>a web developer</p>
 	</section>
