updated page title

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Raleway:700&amp;display=swap" rel="stylesheet">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>heathology's portfolio</title>
 </head>
 
 <body>
