--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					<span class="code">/&gt;</span>
 				</p>
 			</a>
-			<a href="https://heathology.github.io/product-landing-page/" target="_blank" class="project project-tile">
+			<a href="https://heathology.github.io/product-landing-page/" target="_blank" class="project project-tile" rel="noopener">
 				<img class="project-image" src="https://heathology.github.io/portfolio/img/product-landing-page.png"
 					alt="project">
 				<p class="project-title">
