--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<!-- START WELCOME SECTION -->
 
 	<section id="welcome-section" class="welcome-section">
-		<div><img class="logo" src="https://heathology.github.io/portfolio/img/Heath-Media-Designs-Logo-2022.png"></div>
+		<div><img class="logo" src="https://heathology.github.io/portfolio/img/Heath-Media-Designs-Logo-2022.png" alt="heath media designs"></div>
 		<h1 class="intro">Hey I am heathology</h1>
 		<p>a web developer</p>
 	</section>
