images of jesse

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		<h2 class="projects-section-header">These are some of my projects</h2>
 
 		<div class="projects-grid">
-			<a href="https://heathology.github.io/tribute-page/" target="_blank" class="project project-tile">
+			<a href="https://heathology.github.io/tribute-page/" rel="noopener" target="_blank" class="project project-tile">
 				<img class="project-image"
 					src="https://heathology.github.io/tribute-page/img/wesley-tribute-page-thumbnail.png" alt="project">
 				<p class="project-title">
@@ -57,7 +57,7 @@
 					<span class="code">/&gt;</span>
 				</p>
 			</a>
-			<a href="https://heathology.github.io/cafe-menu/" target="_blank" class="project project-tile">
+			<a href="https://heathology.github.io/cafe-menu/" rel="noopener" target="_blank" class="project project-tile">
 				<img class="project-image" src="https://heathology.github.io/portfolio/img/cafe-menu.png" alt="project">
 				<p class="project-title">
 					<span class="code">&lt;</span>
@@ -65,7 +65,7 @@
 					<span class="code">/&gt;</span>
 				</p>
 			</a>
-			<a href="https://heathology.github.io/flexbox-photo-gallery/" target="_blank" class="project project-tile">
+			<a href="https://heathology.github.io/flexbox-photo-gallery/" rel="noopener" target="_blank" class="project project-tile">
 				<img class="project-image" src="https://heathology.github.io/portfolio/img/flexbox-photo-gallery.png"
 					alt="project">
 				<p class="project-title">
@@ -83,7 +83,7 @@
 					<span class="code">/&gt;</span>
 				</p>
 			</a>
-			<a href="https://heathology.github.io/penguin/" target="_blank" class="project project-tile">
+			<a href="https://heathology.github.io/penguin/" rel="noopener" target="_blank" class="project project-tile">
 				<img class="project-image" src="https://heathology.github.io/portfolio/img/penguin.png" alt="project">
 				<p class="project-title">
 					<span class="code">&lt;</span>
@@ -91,7 +91,7 @@
 					<span class="code">/&gt;</span>
 				</p>
 			</a>
-			<a href="https://heathology.github.io/registration-form/" target="_blank" class="project project-tile">
+			<a href="https://heathology.github.io/registration-form/" rel="noopener" target="_blank" class="project project-tile">
 				<img class="project-image" src="https://heathology.github.io/portfolio/img/registration-form.png"
 					alt="project">
 				<p class="project-title">
@@ -102,7 +102,7 @@
 			</a>
 		</div>
 
-		<a href="https://www.behance.net/heathj85" class="btn btn-show-all" target="_blank">See More<i
+		<a href="https://www.behance.net/heathj85" rel="noopener" class="btn btn-show-all" target="_blank">See More<i
 				class="fas fa-chevron-right"></i></a>
 	</section>
 
@@ -116,13 +116,13 @@
 			<p>How do you take your coffee?</p>
 		</div>
 		<div class="contact-links">
-			<a href="https://facebook.com/heathj85" target="_blank" class="btn contact-details"><i
+			<a href="https://facebook.com/heathj85" rel="noopener" target="_blank" class="btn contact-details"><i
 					class="fab fa-facebook-square"></i> Facebook</a>
-			<a id="profile-link" href="https://github.com/heathology" target="_blank" class="btn contact-details"><i
+			<a id="profile-link" href="https://github.com/heathology" rel="noopener" target="_blank" class="btn contact-details"><i
 					class="fab fa-github"></i> GitHub</a>
-			<a href="https://twitter.com/heathjl85" target="_blank" class="btn contact-details"><i
+			<a href="https://twitter.com/heathjl85" rel="noopener" target="_blank" class="btn contact-details"><i
 					class="fab fa-twitter"></i> Twitter</a>
-			<a href="mailto:heathj85@gmail.com" class="btn contact-details"><i class="fas fa-at"></i> Send a mail</a>
+			<a href="mailto:heathj85@gmail.com" rel="noopener" class="btn contact-details"><i class="fas fa-at"></i> Send a mail</a>
 			<a href="tel:555-555-5555" class="btn contact-details"><i class="fas fa-mobile-alt"></i> Call me</a>
 		</div>
 	</section>
@@ -135,7 +135,7 @@
 
 		<p>
 			© Created for
-			<a href="https://www.freecodecamp.com/" target="_blank">freeCodeCamp <i
+			<a href="https://www.freecodecamp.com/" rel="noopener" target="_blank">freeCodeCamp <i
 					class="fab fa-free-code-camp"></i></a> | <a href="https://heathology.github.io">Heath Media
 				Designs</a>
 		</p>
