--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
 	<section id="welcome-section" class="welcome-section">
 		<div><img class="logo" src="https://heathology.github.io/portfolio/img/Heath-Media-Designs-Logo-2022.png" alt="heath media designs"></div>
 		<h1 class="intro">Hey I am heathology</h1>
-		<div><img class="jesse-pic" src="https://heathology.github.io/img/Jesse-Heath-July-2022.jpg" alt="Jesse Heath"></div>
-		<p>a web developer</p>
+			<img class="jesse-pic" src="https://heathology.github.io/img/Jesse-Heath-July-2022.jpg" alt="Jesse Heath">
+			<p>a web developer</p>
+		
 	</section>
 
 	<!-- END WELCOME SECTION -->
