changes to intro section flex layout

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<nav id="navbar" class="nav">
 		<ul class="nav-list">
 			<li>
-				<a href="#welcome-section">About</a>
+				<a href="#intro">About</a>
 			</li>
 			<li>
 				<a href="#projects">Work</a>
@@ -36,10 +36,29 @@
 
 	<section id="welcome-section" class="welcome-section">
 		<div><img class="logo" src="https://heathology.github.io/portfolio/img/Heath-Media-Designs-Logo-2022.png" alt="heath media designs"></div>
-		<h1 class="intro">Hey I am heathology</h1>
-			<img class="jesse-pic" src="https://heathology.github.io/img/Jesse-Heath-July-2022.jpg" alt="Jesse Heath">
-			<p>a web developer</p>
-		
+		<h1 class="intro" id="intro">Hello, I am heathology</h1>
+		<div id="intro-grid">
+			<div class="row">
+				<div class="column">
+					<img class="jesse-pic" src="https://heathology.github.io/img/Jesse-Heath-July-2022.jpg" alt="Jesse Heath">
+				</div>
+				<div class="column">
+					<div class="Aligner">
+						<div class="Aligner-item Aligner-item--top"></div>
+						<div class="Aligner-item">
+							<ul>
+							<li class="intro-list">I am a web developer</li>
+							<li class="intro-list">🌱 I build websites using HTMTL, CSS, JavaScript, and WordPress.</li>
+							<li class="intro-list">👀 I am also a historical theologian.</li>
+							<li class="intro-list">📺 I love watching the following: absolutely anything in the MCU, Family Guy, MAS*H, NCIS,
+								Bosch/Bosch:Legacy</li>
+						</ul>
+						</div>
+						<div class="Aligner-item Aligner-item--bottom"></div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</section>
 
 	<!-- END WELCOME SECTION -->
