--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<style data-merge-styles="true"></style>
-	<link rel="stylesheet" href="/css/styles.css">
+	<link rel="stylesheet" href="../css/styles.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
 		integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&amp;display=swap" rel="stylesheet">
@@ -45,7 +45,7 @@
 				<div class="column">
 							<ul>
 							<li class="intro-list">I am a web developer</li>
-							<li class="intro-list">🌱 I build websites using HTMT, CSS, JavaScript, and WordPress.</li>
+							<li class="intro-list">🌱 I build websites using HTML, CSS, JavaScript, and WordPress.</li>
 							<li class="intro-list">👀 I am also a historical theologian.</li>
 							<li class="intro-list">📺 I love watching the following: absolutely anything in the MCU, Family Guy, MAS*H, NCIS,
 								Bosch/Bosch:Legacy</li>
