updated intro list and intro header spacing.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
 	<section id="welcome-section" class="welcome-section">
 		<div><img class="logo" src="https://heathology.github.io/portfolio/img/Heath-Media-Designs-Logo-2022.png" alt="heath media designs"></div>
+		<hr />
 		<h1 class="intro" id="intro">Hello, I am heathology</h1>
 		<div id="intro-grid">
 			<div class="row">
@@ -44,11 +45,10 @@
 				</div>
 				<div class="column">
 							<ul>
-							<li class="intro-list">I am a web developer</li>
+							<li class="intro-list">💻 I am a web developer.</li>
 							<li class="intro-list">🌱 I build websites using HTML, CSS, JavaScript, and WordPress.</li>
 							<li class="intro-list">👀 I am also a historical theologian.</li>
-							<li class="intro-list">📺 I love watching the following: absolutely anything in the MCU, Family Guy, MAS*H, NCIS,
-								Bosch/Bosch:Legacy</li>
+							<li class="intro-list">📺 I love watching the following: absolutely anything in the MCU, Family Guy, M*A*S*H, NCIS, and Bosch/Bosch:Legacy.</li>
 							</ul>
 				</div>
 			</div>
