--- a/index.html
+++ b/index.html
@@ -115,6 +115,14 @@
 					<span class="code">/&gt;</span>
 				</p>
 			</a>
+			<a href="https://heathology.github.io/fractals/" rel="noopener" target="_blank" class="project project-tile">
+				<img class="project-image" src="https://heathology.github.io/portfolio/img/fractal-js.png" alt="project">
+				<p class="project-title">
+					<span class="code">&lt;</span>
+					Generative Fractal Art JavaScript
+					<span class="code">/&gt;</span>
+				</p>
+			</a>
 		</div>
 
 		<a href="https://www.behance.net/heathj85" rel="noopener" class="btn btn-show-all" target="_blank">See More<i
