--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
 		<h2 class="projects-section-header">These are some of my projects</h2>
 
 		<div class="projects-grid">
+			<a href="http://mettrys.com/coffeyville-resources/" rel="noopener" target="_blank" class="project project-tile">
+				<img class="project-image" src="https://i.ibb.co/rGySZ4L/mettrys-crct-portfolio-5.png" alt="mettrys-crct-portfolio-5" border="0" />
+				<p class="project-title">
+					<span class="code">&lt;</span>
+					Mettry's CRCT WordPress Store
+					<span class="code">/&gt;</span>
+				</p>
+			</a>
 			<a href="https://heathology.github.io/tribute-page/" rel="noopener" target="_blank" class="project project-tile">
 				<img class="project-image"
 					src="https://heathology.github.io/tribute-page/img/wesley-tribute-page-thumbnail.png" alt="project">
