added previous wordpress projects link

--- a/index.html
+++ b/index.html
@@ -63,14 +63,26 @@
 		<h2 class="projects-section-header">These are some of my projects</h2>
 
 		<div class="projects-grid">
+			
 			<a href="http://mettrys.com/coffeyville-resources/" rel="noopener" target="_blank" class="project project-tile">
-				<img class="project-image" src="https://i.ibb.co/rGySZ4L/mettrys-crct-portfolio-5.png" alt="mettrys-crct-portfolio-5" border="0" />
+				<img class="project-image" src="https://i.ibb.co/rGySZ4L/mettrys-crct-portfolio-5.png"
+					alt="mettrys-crct-portfolio-5" />
 				<p class="project-title">
 					<span class="code">&lt;</span>
 					Mettry's CRCT WordPress Store
 					<span class="code">/&gt;</span>
 				</p>
 			</a>
+			
+			<a href="http://mettrys.com/coffeyville-resources/" rel="noopener" target="_blank" class="project project-tile">
+				<img class="project-image" src="https://i.ibb.co/HzgSH4Z/great-command-ministries-portfolio.jpg" alt="great-command-ministries-portfolio"/>
+				<p class="project-title">
+					<span class="code">&lt;</span>
+					Previous WordPress Projects
+					<span class="code">/&gt;</span>
+				</p>
+			</a>
+			
 			<a href="https://heathology.github.io/tribute-page/" rel="noopener" target="_blank" class="project project-tile">
 				<img class="project-image"
 					src="https://heathology.github.io/tribute-page/img/wesley-tribute-page-thumbnail.png" alt="project">
